--- a/Teryt/Teryt/src/Teryt.WebApi/nlog.config
+++ b/Teryt/Teryt/src/Teryt.WebApi/nlog.config
@@ -1,26 +1,29 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-      autoReload="true"
-      internalLogLevel="Trace"
-      internalLogFile="C:\Nlog\logs\internalLog.txt">
+	  autoReload="true"
+	  internalLogLevel="Info"
+	  internalLogFile="c:\temp\terytLogs.txt">
+	<extensions>
+		<add assembly="NLog.Web.AspNetCore"/>
+	</extensions>
 
 	<targets>
 		<target xsi:type="Database"
-      name="Terryt"
-      connectionString="Server=localhost;Database=Teryt;user=sa;password=Studenci2022;TrustServerCertificate=true;"
-      commandText="INSERT INTO Logs(CreatedOn,Message,Level,Exception,StackTrace,Logger,Url) VALUES (@datetime,@msg,@level,@exception,@trace,@logger,@url)">
-			<parameter name="@datetime" layout="${date}" />
-			<parameter name="@msg" layout="${message}" />
-			<parameter name="@level" layout="${level}" />
-			<parameter name="@exception" layout="${exception}" />
-			<parameter name="@trace" layout="${stacktrace}" />
-			<parameter name="@logger" layout="${logger}" />
-			<parameter name="@url" layout="${aspnet-request-url}" />
+		  name="Teryt"
+		  connectionString="Server=localhost;Database=Teryt;user=sa;password=Studenci2022;TrustServerCertificate=true;"
+		  dbProvider="Microsoft.Data.SqlClient.SqlConnection, Microsoft.Data.SqlClient"
+		  commandText="INSERT INTO Logs(Date,Level, Message, MachineName, Logger)
+					   VALUES (@Date,@Level,@Message,@Machinename,@Logger)">
+			<parameter name="@Date" layout="${longdate}" dbType="DateTime" />
+			<parameter name="@Level" layout="${level}"/>
+			<parameter name="@Message" layout="${message}"/>
+			<parameter name="@Machinename" layout="${machinename}"/>
+			<parameter name="@Logger" layout="${logger}"/>
 		</target>
 	</targets>
-
 	<rules>
-		<logger name="*" minlevel="Trace" writeTo="Terryt" />
+		<logger name="*" minLevel="Info" writeTo="logconsole" />
+		<logger name="*" minLevel="Debug" writeTo="Teryt" />
 	</rules>
 </nlog>
