--- a/Teryt/Teryt/src/Teryt.WebApi/nlog.config
+++ b/Teryt/Teryt/src/Teryt.WebApi/nlog.config
@@ -9,8 +9,7 @@
 	</extensions>
 
 	<targets>
-		<target xsi:type="Database"
-		  name="Teryt"
+		<target name="Teryt" xsi:type="Database"
 		  connectionString="Server=localhost;Database=Teryt;user=sa;password=Studenci2022;TrustServerCertificate=true;"
 		  dbProvider="Microsoft.Data.SqlClient.SqlConnection, Microsoft.Data.SqlClient"
 		  commandText="INSERT INTO Logs(Date,Level, Message, MachineName, Logger)
@@ -24,6 +23,6 @@
 	</targets>
 	<rules>
 		<logger name="*" minLevel="Info" writeTo="logconsole" />
-		<logger name="*" minLevel="Debug" writeTo="Teryt" />
+		<logger name="*" minLevel="Error" writeTo="Teryt" />
 	</rules>
 </nlog>
