Dodanie auth-interceptor

--- a/Teryt/Teryt/src/Teryt.WebApi/appsettings.Development.json
+++ b/Teryt/Teryt/src/Teryt.WebApi/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "TerrytDatabase": "Server=localhost,1433;Database=Teryt;user=sa;password=Studenci2022;TrustServerCertificate=true;"
+    "TerrytDatabase": "Server=DESKTOP-E4C26R9\\TEW_SQLEXPRESS;Database=Teryt;TrustServerCertificate=true;Integrated Security=true;Trusted_Connection=true"
   }
 }
