--- a/Teryt/Teryt/src/Dockerfile
+++ b/Teryt/Teryt/src/Dockerfile
@@ -1,19 +1,26 @@
-FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
+FROM  mcr.microsoft.com/dotnet/sdk:6.0 as build-env
 WORKDIR /app
-EXPOSE 5000
 
-FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
-WORKDIR /src
-COPY ["./Teryt.WebApi/Teryt.WebApi.csproj", "."]
-RUN dotnet restore "./Teryt.WebApi.csproj"
-COPY . .
-WORKDIR "/src/."
-RUN dotnet build "./Teryt.WebApi/Teryt.WebApi.csproj" -c Release -o /app/build
+EXPOSE 80
+EXPOSE 443
 
-FROM build AS publish
-RUN dotnet publish "./Teryt.WebApi/Teryt.WebApi.csproj" -c Release -o /app/publish 
+# Copy csproj and restore as distinct layers
+COPY Teryt.WebApi/Teryt.WebApi.csproj ./Teryt.WebApi/
 
-FROM base AS final
+
+RUN dotnet restore ./Teryt.WebApi/Teryt.WebApi.csproj -s https://api.nuget.org/v3/index.json 
+
+# Copy everything else and build
+COPY . ./
+RUN dotnet publish -c Release -o out
+
+# Build runtime image
+FROM  mcr.microsoft.com/dotnet/sdk:6.0
+
 WORKDIR /app
-COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "Teryt.WebApi.dll"]
+COPY --from=build-env /app/out .
+
+
+ENTRYPOINT ["dotnet", "Teryt.WebApi.dll", "--urls", "http://0.0.0.0:80", "https://0.0.0.443"]
+
+ENV ASPNETCORE_ENVIRONMENT="Development"
