Ukończenie autentykacji i autoryzacji, dodanie Ocelot

--- a/Teryt/Teryt/src/Teryt.WebApi/Properties/launchSettings.json
+++ b/Teryt/Teryt/src/Teryt.WebApi/Properties/launchSettings.json
@@ -19,6 +19,22 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
+    "Teryt.auth.jwt": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "launchBrowser": false,
+      "applicationUrl": "http://localhost:3000"
+    },
+    "OcelotGateway": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "launchBrowser": true,
+      "launchUrl": "swagger",
+      "applicationUrl": "http://localhost:5000",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
